[package]
name = "front-yew"
version = "0.1.0"
authors = ["kumusan <ryogi0200@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.16.2"
anyhow = "1"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.62"
stdweb = "0.4.2"
